[gd_scene load_steps=6 format=3 uid="uid://dq52btfdshp6o"]

[ext_resource type="Script" uid="uid://b0kf8qmblys7x" path="res://PROTOTIPO5/main.gd" id="1_on1ap"]
[ext_resource type="PackedScene" uid="uid://d3phyav16xrbj" path="res://PROTOTIPO6efectos/efecto.tscn" id="2_pbtkh"]
[ext_resource type="Texture2D" uid="uid://ddbjwtdmmrndy" path="res://assets/png boceto basico del mimido.png" id="2_sniqo"]
[ext_resource type="AudioStream" uid="uid://ddjhbai8eqqmx" path="res://assets/tambor.mp3" id="4_fxfcp"]
[ext_resource type="AudioStream" uid="uid://pwcfnipdemsr" path="res://assets/Canci√≥n principal.mp3" id="4_pbtkh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_on1ap")

[node name="Efecto" parent="." instance=ExtResource("2_pbtkh")]
position = Vector2(7, -59)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = 354.0
offset_top = 258.0
offset_right = 687.0
offset_bottom = 277.0
color = Color(0.196143, 0.196143, 0.196143, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 758.0
offset_top = 883.0
offset_right = 1091.0
offset_bottom = 892.0
color = Color(0.196143, 0.196143, 0.196143, 1)

[node name="Linea" type="Node2D" parent="."]
position = Vector2(718, 848)

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(454, 257)

[node name="Notas" type="Node2D" parent="."]
position = Vector2(461, 89)

[node name="PngBocetoBasicoDelMimido" type="Sprite2D" parent="."]
position = Vector2(905, 324)
scale = Vector2(0.129717, 0.123822)
texture = ExtResource("2_sniqo")

[node name="Musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_pbtkh")

[node name="Tambor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fxfcp")
volume_db = 24.0
attenuation = 0.143588
bus = &"TAMBOR"

[node name="volver" type="Button" parent="."]
offset_left = 1564.0
offset_top = 44.0
offset_right = 1680.0
offset_bottom = 151.0
theme_override_font_sizes/font_size = 40
text = "x"

[node name="LabelAciertos" type="Label" parent="."]
offset_left = 81.0
offset_top = 50.0
offset_right = 358.0
offset_bottom = 126.0
theme_override_font_sizes/font_size = 55
text = "Aciertos: 0"

[node name="LabelPifies" type="Label" parent="."]
offset_left = 82.0
offset_top = 139.0
offset_right = 122.0
offset_bottom = 215.0
theme_override_font_sizes/font_size = 55
text = "Pifies: 0"

[connection signal="pressed" from="volver" to="." method="_on_volver_pressed"]
